# prediction_fund

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
deploy/: README.md  render.yaml  staging.env.example
docs/: api.md  azure_staging.md  data_scaling.md  deployment.md  desk_workbench.md  divergence_signals.md  equivalence.md  ingestion.md  integrity_signals.md  market_data.md  paper_execution.md  pretrade_gate.md  release_candidate_validation.md  replay.md  resolution_corpus.md  scenario_features.md  staging_dataops_pilot.md  staging_deployment.md  staging_pilot_validation.md  strategy_research.md  vendor_data_evaluation.md
scripts/: azure_build_push.sh  azure_deploy_staging.sh  azure_disable_fixture_schedule.sh  azure_enable_fixture_schedule.sh  azure_inspect_counts.sh  azure_migrate_and_verify.sh  azure_staging_smoke.sh  inspect_db_counts.py  run_api.sh  run_fixture_dataops_job.sh  run_live_collection.sh  setup_livecollection_launchd.sh  smoke_docker.sh  smoke_local.sh  staging_desk_cycle.sh  staging_migrate_and_verify.sh  staging_public_read_pilot.sh  staging_smoke.sh  staging_workbench_smoke.sh  staging_workbench_status.sh
tests/: api_test_helpers.py  equivalence_helpers.py  paper_helpers.py  research_helpers.py  test_ambiguity_assessment.py  test_api_auth.py  test_api_dataops.py  test_api_divergence.py  test_api_equivalence.py  test_api_health.py  test_api_ingestion.py  test_api_integrity.py  test_api_marketdata.py  test_api_markets.py  test_api_paper.py  test_api_pretrade.py  (+109 more)
(+193 files in other folders)
