[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prediction-desk"
version = "0.1.0"
description = "Institutional-grade prediction-market research skeleton."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.7",
  "psycopg[binary]>=3.2",
  "sqlalchemy>=2.0",
  "typer>=0.12",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10",
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
prediction-desk = "prediction_desk.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prediction_desk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
  "postgres: integration tests that require TEST_DATABASE_URL",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["prediction_desk"]
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
